# rust-stuff

./: README.md
aerial-rust/: Cargo.toml  Makefile  README.md
aerial-rust/assets/: credits.txt
aerial-rust/src/: audio_manager.rs  enemy.rs  enemy_bond.rs  game.rs  main.rs  player.rs  score.rs  time_manager.rs  utils.rs  window.rs
aerial-rust/src/math/: line2.rs  mod.rs  rect2.rs  vec2.rs
aerial-rust/src/traits/: drawer.rs  mod.rs  updater.rs
credits-manager/: Cargo.toml  Makefile  build.rs  credits-manager-svc.proto  docker-compose.yaml  go.mod
credits-manager/docker/: credits-manager-deploy.Dockerfile  credits-manager-dev.Dockerfile  proto-go.Dockerfile
credits-manager/src/: Makefile  controller.rs  credits_manager_svc.rs  dao.rs  main.rs  mod.rs
credits-manager/src/actions/: consume.rs  get_balance.rs  mod.rs  topup.rs
